--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Fri Jan 14 13:30:41 2005  Tim Janik  <timj@gtk.org>
+
+	* tools/bsewavetool.cc: cleanups, added loop command skeleton.
+
 Fri Jan 14 13:04:20 2005  Tim Janik  <timj@gtk.org>
 
 	* tools/bsewavetool.cc: added parse_str_option() and parse_bool_option(),
