--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2005-01-18  Alexander Shopov  <ash@contact.bg>
+
+	* bg.po: Added Bulgarian translation by
+	Iassen Pramatarov <turin@fsa-bg.org>
+
 2005-01-16  Miloslav Trmac  <mitr@volny.cz>
 
 	* cs.po: Updated Czech translation.
