--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2005-01-19  Vincent van Adrighem  <adrighem@gnome.org>
+
+	* nl.po: Translation updated by Tino Meinen.
+
 2005-01-18  Alexander Shopov  <ash@contact.bg>
 
 	* bg.po: Added Bulgarian translation by
