--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Thu Jan 20 05:21:23 2005  Tim Janik  <timj@gtk.org>
+
+	* tools/bwtwave.cc (store): properly pass on write errors.
+
 Thu Jan 20 04:03:00 2005  Tim Janik  <timj@gtk.org>
 
 	* beast-gtk/bstapp.c: reworded menu entries.
