--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Thu Jan 20 17:16:26 2005  Tim Janik  <timj@gtk.org>
+
+	* tools/bwtwave.cc (store): use sfi_wstore_putf() to store floats.
+
 Thu Jan 20 05:21:23 2005  Tim Janik  <timj@gtk.org>
 
 	* tools/bwtwave.cc (store): properly pass on write errors.
